# crop_detec

./: .gitignore  README.md
_boilerplate/: .gitignore  pyproject.toml
_boilerplate/src/common/utils/: logger.py
models/: class_names.json
training/: .gitignore  README.md  pyproject.toml  requirements.txt
training/api/: __init__.py  main.py  routes.py  schemas.py
training/config/: config.yaml
training/src/: __init__.py  config.py  dataset.py  evaluate.py  export.py  predict.py  train.py
training/src/models/: __init__.py  custom_cnn.py  transfer_cnn.py
training/src/utils/: __init__.py  callbacks.py  logger.py
