[project]
name = "crop-detection"
version = "1.0.0"
description = "CNN-based crop detection and classification using TensorFlow/Keras"
authors = [
    { name = "Soumyajit pal", email = "soumyajit@jadequest.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tensorflow>=2.15.0",
    "tf2onnx>=1.16.0",
    "onnx>=1.15.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.7",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*", "api*"]

[tool.pyright]
extraPaths = [".", "src"]

